--- a/MyTemplate/index.html
+++ b/MyTemplate/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html >
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-
 <head>
     <meta name="title" content="Imversed.com">
     <meta name="pageviews" content="" />
@@ -37,24 +36,80 @@
 <!-- banner Section starts -->
 <section id="firstSection">
 	<div class="container-fluid px-0">
-		<div class="row no-gutters">
-			<div class="col-12">
-				<div class="row no-gutters position-relative">
-					<div class="position-absolute col-12 h-100 w-100 imgOverlay">
-						 &nbsp;
-					</div>
-					<img src="images/slider-bg-1.jpg" class="d-lg-block d-none w-100">
-					<img src="images/mobileBanner.PNG" class="d-lg-none d-block w-100 mob_img">
-					<div class="position-absolute align-self-center ml-50">
-						<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-3 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
-						<p class="txtWhite mr-200 pb-3 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
-						<span class="px-3">
-							<button class="btn btn-info border-radius50 mr-2 custom_btn">EXPLORE US</button>
-							<button class="btn border-radius50 transparent_btn txtWhite">LEARN MORE</button>
-						</span>
-					</div>
-				</div>
-			</div>
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		  <div class="carousel-inner">
+		    <div class="carousel-item active">
+		      <div class="row no-gutters">
+		      	<div class="col-12">
+		      		<div class="row no-gutters position-relative">
+		      			<div class="position-absolute col-12 h-100 w-100 imgOverlay">
+		      				 &nbsp;
+		      			</div>
+		      			<img src="images/slider-bg-1.jpg" class="d-lg-block d-none w-100">
+		      			<img src="images/mobileBanner.PNG" class="d-lg-none d-block w-100 mob_img">
+		      			<div class="position-absolute align-self-center ml-50">
+		      				<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-3 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
+		      				<p class="txtWhite mr-200 pb-3 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
+		      				<span class="px-3">
+		      					<button class="btn btn-info border-radius50 mr-2 custom_btn">EXPLORE US</button>
+		      					<button class="btn border-radius50 transparent_btn txtWhite">LEARN MORE</button>
+		      				</span>
+		      			</div>
+		      		</div>
+		      	</div>
+		      </div>
+		    </div>
+		    <div class="carousel-item">
+		      <div class="row no-gutters">
+		      	<div class="col-12">
+		      		<div class="row no-gutters position-relative">
+		      			<div class="position-absolute col-12 h-100 w-100 imgOverlay">
+		      				 &nbsp;
+		      			</div>
+		      			<img src="images/slider-bg-2.jpg" class="d-lg-block d-none w-100">
+		      			<img src="images/mobBanner_2.jpg" class="d-lg-none d-block w-100 mob_img">
+		      			<div class="position-absolute align-self-center ml-50">
+		      				<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-3 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
+		      				<p class="txtWhite mr-200 pb-3 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
+		      				<span class="px-3">
+		      					<button class="btn btn-info border-radius50 mr-2 custom_btn">EXPLORE US</button>
+		      					<button class="btn border-radius50 transparent_btn txtWhite">LEARN MORE</button>
+		      				</span>
+		      			</div>
+		      		</div>
+		      	</div>
+		      </div>
+		    </div>
+		    <div class="carousel-item">
+		      <div class="row no-gutters">
+		      	<div class="col-12">
+		      		<div class="row no-gutters position-relative">
+		      			<div class="position-absolute col-12 h-100 w-100 imgOverlay">
+		      				 &nbsp;
+		      			</div>
+		      			<img src="images/slider-bg-3.jpg" class="d-lg-block d-none w-100">
+		      			<img src="images/mobBanner_3.jpg" class="d-lg-none d-block w-100 mob_img">
+		      			<div class="position-absolute align-self-center ml-50">
+		      				<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-3 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
+		      				<p class="txtWhite mr-200 pb-3 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
+		      				<span class="px-3">
+		      					<button class="btn btn-info border-radius50 mr-2 custom_btn">EXPLORE US</button>
+		      					<button class="btn border-radius50 transparent_btn txtWhite">LEARN MORE</button>
+		      				</span>
+		      			</div>
+		      		</div>
+		      	</div>
+		      </div>
+		    </div>
+		  </div>
+		  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
 		</div>
 	</div>
 </section>
@@ -442,8 +497,8 @@
 							<img src="images/post-1.jpg" alt="">
 							<div class="card-body">
 								<h1 class="card-title fs20 lh20">Simple Image Post</h1>
-								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.</p>
-								<button class="btn btn-info border-radius50 custom_btn">READ MORE</button>
+								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.<span class="readMoreSpan d-none" id="Read_More"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod qui officia deserunt mollit anim id est laborum.</span></p>
+								<button class="btn btn-info border-radius50 custom_btn rd_more">READ MORE</button>
 							</div>
 						</div>
 					</div>
@@ -452,8 +507,8 @@
 							<img src="images/post-2.jpg" alt="">
 							<div class="card-body">
 								<h1 class="card-title fs20 lh20">Simple Image Post</h1>
-								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.</p>
-								<button class="btn btn-info border-radius50 custom_btn">READ MORE</button>
+								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.<span class="readMoreSpan d-none">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod qui officia deserunt mollit anim id est laborum.</span></p>
+								<button class="btn btn-info border-radius50 custom_btn rd_more">READ MORE</button>
 							</div>
 						</div>
 					</div>
@@ -462,8 +517,8 @@
 							<img src="images/post-3.jpg" alt="">
 							<div class="card-body">
 								<h1 class="card-title fs20 lh20">Simple Image Post</h1>
-								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.</p>
-								<button class="btn btn-info border-radius50 custom_btn">READ MORE</button>
+								<p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit magni cupiditate mollitia voluptas nobis ipsam.<span class="readMoreSpan d-none">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod qui officia deserunt mollit anim id est laborum.</span></p>
+								<button class="btn btn-info border-radius50 custom_btn rd_more">READ MORE</button>
 							</div>
 						</div>
 					</div>
@@ -547,6 +602,19 @@
     	</div>
     </div>
 </section>
+	<script>
+		// function read(){
+		// 	document.getElementById("Read_More").classList.toggle('d-none');	
+		// 	var first=document.getElementById("rd_more").innerHTML;
+		// 	if(first=="READ MORE"){
+		// 		document.getElementById("rd_more").innerHTML="VIEW LESS";
+		// 	}
+		// 	else{
+		// 		document.getElementById("rd_more").innerHTML="READ MORE";
+		// 	}
+	 //    }
+
+	</script>
 <!-- Section Footer Ends -->
 
 <!-- Section Footer Ends -->
