--- a/MyTemplate/index.html
+++ b/MyTemplate/index.html
@@ -36,81 +36,25 @@
 <!-- banner Section starts -->
 <section id="firstSection">
 	<div class="container-fluid px-0">
-		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-		  <div class="carousel-inner">
-		    <div class="carousel-item active">
-		      <div class="row no-gutters">
-		      	<div class="col-12">
-		      		<div class="row no-gutters position-relative">
-		      			<div class="position-absolute col-12 h-100 w-100 imgOverlay">
-		      				 &nbsp;
-		      			</div>
-		      			<img src="images/slider-bg-1.jpg" class="d-lg-block d-none w-100">
-		      			<img src="images/mobileBanner.PNG" class="d-lg-none d-block w-100 mob_img">
-		      			<div class="position-absolute align-self-center ml-50">
-		      				<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-3 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
-		      				<p class="txtWhite mr-200 pb-3 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
-		      				<span class="px-3">
-		      					<button class="btn btn-info border-radius50 mr-2 custom_btn">EXPLORE US</button>
-		      					<button class="btn border-radius50 transparent_btn txtWhite">LEARN MORE</button>
-		      				</span>
-		      			</div>
-		      		</div>
-		      	</div>
-		      </div>
-		    </div>
-		    <div class="carousel-item">
-		      <div class="row no-gutters">
-		      	<div class="col-12">
-		      		<div class="row no-gutters position-relative">
-		      			<div class="position-absolute col-12 h-100 w-100 imgOverlay">
-		      				 &nbsp;
-		      			</div>
-		      			<img src="images/slider-bg-2.jpg" class="d-lg-block d-none w-100">
-		      			<img src="images/mobBanner_2.jpg" class="d-lg-none d-block w-100 mob_img">
-		      			<div class="position-absolute align-self-center ml-50">
-		      				<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-3 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
-		      				<p class="txtWhite mr-200 pb-3 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
-		      				<span class="px-3">
-		      					<button class="btn btn-info border-radius50 mr-2 custom_btn">EXPLORE US</button>
-		      					<button class="btn border-radius50 transparent_btn txtWhite">LEARN MORE</button>
-		      				</span>
-		      			</div>
-		      		</div>
-		      	</div>
-		      </div>
-		    </div>
-		    <div class="carousel-item">
-		      <div class="row no-gutters">
-		      	<div class="col-12">
-		      		<div class="row no-gutters position-relative">
-		      			<div class="position-absolute col-12 h-100 w-100 imgOverlay">
-		      				 &nbsp;
-		      			</div>
-		      			<img src="images/slider-bg-3.jpg" class="d-lg-block d-none w-100">
-		      			<img src="images/mobBanner_3.jpg" class="d-lg-none d-block w-100 mob_img">
-		      			<div class="position-absolute align-self-center ml-50">
-		      				<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-3 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
-		      				<p class="txtWhite mr-200 pb-3 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
-		      				<span class="px-3">
-		      					<button class="btn btn-info border-radius50 mr-2 custom_btn">EXPLORE US</button>
-		      					<button class="btn border-radius50 transparent_btn txtWhite">LEARN MORE</button>
-		      				</span>
-		      			</div>
-		      		</div>
-		      	</div>
-		      </div>
-		    </div>
-		  </div>
-		  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Previous</span>
-		  </a>
-		  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Next</span>
-		  </a>
-		</div>
+		<div class="row no-gutters">
+				      	<div class="col-12">
+				      		<div class="row no-gutters position-relative">
+				      			<div class="position-absolute col-12 h-100 w-100 imgOverlay">
+				      				 &nbsp;
+				      			</div>
+				      			<img src="images/slider-bg-1.jpg" class="d-lg-block d-none w-100">
+				      			<img src="images/mobileBanner.PNG" class="d-lg-none d-block w-100 mob_img">
+				      			<div class="position-absolute align-self-center ml-50">
+				      				<p class="txtWhite heading_font fs62 lh62 mr-200 pb-3 px-3 m-fs62 m-lh62">WE ARE SMART CREATIVE AGENCY</p>
+				      				<p class="txtWhite mr-200 pb-3 px-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos quam, fuga nobis unde hic veniam Lorem ipsum dolor sit amet, consectetur.</p>
+				      				<span class="px-3">
+				      					<button class="btn btn-info border-radius50 mr-2 custom_btn">EXPLORE US</button>
+				      					<button class="btn border-radius50 transparent_btn txtWhite">LEARN MORE</button>
+				      				</span>
+				      			</div>
+				      		</div>
+				      	</div>
+				      </div>
 	</div>
 </section>
 <!-- banner Section ends -->
@@ -422,12 +366,43 @@
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>1 GB Storage</p>
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>10 GB Bandwidth</p>
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>24/7 TechSupport</p>
-									   		<button class="btn btn-info border-radius50 custom_btn">SIGNUP</button>
+									   		<button class="btn btn-info border-radius50 custom_btn" data-toggle="modal" data-target="#myBasic">SIGNUP</button>
 									   </div>
+									</div>
+									<div class="modal container px-0" id="myBasic">
+										<div class="modal-dialog">
+											<div class="modal-content">
+												<div class="modal-header">
+													<h1 class="text-center w-100">Welcome to the Basic Plan</h1>
+												</div>
+												<div class="modal-body">
+													<p class="pb-2">First of all let us understand the services this plan provides us:</p>
+													<p class="pb-2">
+														Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum consequuntur fuga assumenda explicabo quo officiis eveniet praesentium.
+													</p>
+													<p class="pb-2">
+														Please fill in the below form to proceed:
+													</p>
+													<form class="form">
+														<p>First Name: <input type="text" placeholder="First Name" size="25" class="mb-2"></p>
+														<p>Last Name: <input type="text" placeholder="Last Name" size="25" class="mb-2"></p>
+														<p>User Name: <input type="text" placeholder="User Name" size="25" class="mb-2"></p>
+														<p></p>
+														<p>
+															Password: &nbsp;&nbsp;<input type="Password" placeholder="Password" size="25" class="mb-2">
+														</p>
+													</form>
+													<button type="button" class="btn btn-info mt-3">SUBMIT</button>
+												</div>
+												<div class="modal-footer">
+													<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+												</div>
+											</div>
+										</div>
 									</div>
 									<div class="col-lg-4 col-12 pt-5">
 										<div class="card px-5 pb-5 pt-2">
-									   		<p class="pt-3">BASIC</p>
+									   		<p class="pt-3">INTERMEDIATE</p>
 									   		<h2 class="display-4 py-1 text-info">$99</h2>
 									   		<p class="small pb-5 darkGrey">Suitable for small businesses with upto 5 employees</p>
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>1GB Disk Space</p>
@@ -436,12 +411,43 @@
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>1 GB Storage</p>
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>10 GB Bandwidth</p>
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>24/7 TechSupport</p>
-									   		<button class="btn btn-info border-radius50 custom_btn">SIGNUP</button>
+									   		<button class="btn btn-info border-radius50 custom_btn" data-toggle="modal" data-target="#myIntermediate">SIGNUP</button>
 									   </div>
+									</div>
+									<div class="modal container px-0" id="myIntermediate">
+										<div class="modal-dialog">
+											<div class="modal-content">
+												<div class="modal-header">
+													<h1 class="text-center w-100">Welcome to the Intermediate Plan</h1>
+												</div>
+												<div class="modal-body">
+													<p class="pb-2">First of all let us understand the services this plan provides us:</p>
+													<p class="pb-2">
+														Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum consequuntur fuga assumenda explicabo quo officiis eveniet praesentium.
+													</p>
+													<p class="pb-2">
+														Please fill in the below form to proceed:
+													</p>
+													<form class="form">
+														<p>First Name: <input type="text" placeholder="First Name" size="25" class="mb-2"></p>
+														<p>Last Name: <input type="text" placeholder="Last Name" size="25" class="mb-2"></p>
+														<p>User Name: <input type="text" placeholder="User Name" size="25" class="mb-2"></p>
+														<p></p>
+														<p>
+															Password: &nbsp;&nbsp;<input type="Password" placeholder="Password" size="25" class="mb-2">
+														</p>
+													</form>
+													<button type="button" class="btn btn-info mt-3">SUBMIT</button>
+												</div>
+												<div class="modal-footer">
+													<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+												</div>
+											</div>
+										</div>
 									</div>
 									<div class="col-lg-4 col-12 pt-5">
 										<div class="card px-5 pb-5 pt-2">
-									   		<p class="pt-3">BASIC</p>
+									   		<p class="pt-3">ADVANCED</p>
 									   		<h2 class="display-4 py-1 text-info">$99</h2>
 									   		<p class="small pb-5 darkGrey">Great for large businesses with more than 5 employees</p>
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>1GB Disk Space</p>
@@ -450,8 +456,39 @@
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>1 GB Storage</p>
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>10 GB Bandwidth</p>
 									   		<p class="pb-3 small darkGrey"><span class="fa fa-angle-right">&nbsp;</span>24/7 TechSupport</p>
-									   		<button class="btn btn-info border-radius50 custom_btn">SIGNUP</button>
+									   		<button class="btn btn-info border-radius50 custom_btn" data-toggle="modal" data-target="#myAdvanced">SIGNUP</button>
 									   </div>
+									</div>
+									<div class="modal container px-0" id="myAdvanced">
+										<div class="modal-dialog">
+											<div class="modal-content">
+												<div class="modal-header">
+													<h1 class="text-center w-100">Welcome to the Advanced Plan</h1>
+												</div>
+												<div class="modal-body">
+													<p class="pb-2">First of all let us understand the services this plan provides us:</p>
+													<p class="pb-2">
+														Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum consequuntur fuga assumenda explicabo quo officiis eveniet praesentium.
+													</p>
+													<p class="pb-2">
+														Please fill in the below form to proceed:
+													</p>
+													<form class="form">
+														<p>First Name: <input type="text" placeholder="First Name" size="25" class="mb-2"></p>
+														<p>Last Name: <input type="text" placeholder="Last Name" size="25" class="mb-2"></p>
+														<p>User Name: <input type="text" placeholder="User Name" size="25" class="mb-2"></p>
+														<p></p>
+														<p>
+															Password: &nbsp;&nbsp;<input type="Password" placeholder="Password" size="25" class="mb-2">
+														</p>
+													</form>
+													<button type="button" class="btn btn-info mt-3">SUBMIT</button>
+												</div>
+												<div class="modal-footer">
+													<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
