--- a/MyTemplate/index.html
+++ b/MyTemplate/index.html
@@ -303,7 +303,7 @@
 				<p class="text-center px-200 pb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia modi vel aperiam enim doloribus Lorem ipsum dolor sit amet.</p>
 				<div class="row borderLine mx-auto bg-info"></div>
 				<div class="row pt-5 pb-5">
-					<div class="col-lg-4 col-12">
+					<div class="col-lg-4 col-12 ZoomIn pb-3">
 						<div class="card">
 							<img src="images/member-1.jpg" alt="">
 							<div class="card-body text-center">
@@ -313,7 +313,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-12">
+					<div class="col-lg-4 col-12 ZoomIn pb-3">
 						<div class="card">
 							<img src="images/member-2.jpg" alt="">
 							<div class="card-body text-center">
@@ -323,7 +323,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-12">
+					<div class="col-lg-4 col-12 ZoomIn pb-3">
 						<div class="card">
 							<img src="images/member-3.jpg" alt="">
 							<div class="card-body text-center">
