--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -10,24 +10,40 @@
     <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/myStyle.css">
 </head>
-<body>
-	<section id="FirstSection">
-		<div class="container-fluid px-0">
-			<div class="row no-gutters">
-				<div class="col-12">
-					<div class="row position-relative no-gutters">
-				    <img src="images/Desk_img.jpg" class="w-100 d-lg-block d-none">
-				    <img src="images/Mob_img.jpg" class="w-100 Desk_img d-block d-lg-none">
-					    <div class="row position-absolute no-gutters align-self-center">
-					    	<p class="bg_font px-lg-5 px-3 mob_bg-font">Hi! I'm<br> Rohit Kotian<br> Web Developer</p>
-					    </div>
+<body class="body_font">
+	<nav class="navbar navbar-expand-lg navbar-dark navbar_font navbar_bg p-lg-3">
+		  <a class="navbar-brand ml-lg-5" href="#">ROHIT KOTIAN</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
+		    <ul class="navbar-nav ml-auto">
+		      <li class="nav-item mx-lg-2">
+		        <a class="nav-link text-white" href="#">PORTFOLIO</a>
+		      </li>
+		      <li class="nav-item mx-lg-2">
+		        <a class="nav-link text-white" href="#">ABOUT</a>
+		      </li>
+		      <li class="nav-item mx-lg-2">
+		        <a class="nav-link text-white" href="#">CONTACT</a>
+		      </li>
+		    </ul>
+		  </div>
+	</nav>
+	<section id="firstSection">
+		<div class="container-fluid">
+			<div class="row bg-Section1">
+				<div class="col-12 fullscreen">
+					<div class="mt-5 pt-3 text-center">
+						<img class="rounded-circle" src="images/Rk_Profile.png">
+						<h1 class="display-4 mt-4 mob_heading">ROHIT KOTIAN</h1>
 					</div>
-				</div>
-			</div>
+				</div>		
+			</div>	
 		</div>
 	</section>
-	<section id="SecondSection">
-		a
+	<section id="secondSection">
+		
 	</section>
 </body>
 </html>
