--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -20,7 +20,6 @@
 		    <ul class="navbar-nav ml-auto">
 		      <li class="nav-item mx-lg-2">
 		        <a class="nav-link text-white" href="#">PORTFOLIO</a>
-		      </li>
 		      <li class="nav-item mx-lg-2">
 		        <a class="nav-link text-white" href="#">ABOUT</a>
 		      </li>
@@ -36,14 +35,100 @@
 				<div class="col-12 fullscreen">
 					<div class="mt-5 pt-3 text-center">
 						<img class="rounded-circle" src="images/Rk_Profile.png">
-						<h1 class="display-4 mt-4 mob_heading">ROHIT KOTIAN</h1>
+						<h1 class="display-4 pt-4 mob_heading">ROHIT KOTIAN</h1>
+						<img class="img-fluid" src="images/divider.png">
+						<p class="pt-4 fs30 m-fs-20">
+							Web Developer | Designer | Innovator
+						</p>
+						<p class="lead mx-lg-5 pt-lg-3 fs20 m-fs-16">
+							A self-motivated IT professional with high knowledge and proficiency in JavaScript, HTML , CSS and mobile responsive web development, as well as strong skills and ability in writing clean and efficient code.
+						</p>	
 					</div>
 				</div>		
 			</div>	
 		</div>
 	</section>
 	<section id="secondSection">
-		
+		<div class="container-fluid">
+			<div class="row bg-Section2">
+				<div class="col-12">
+					<div class="text-center header_Section">	
+						<h1 class="m-fs-35 pt-5 pb-lg-3 pb-1">PORTFOLIO</h1>
+				    	<img class="img-fluid" src="images/divider.png">
+				    </div>	
+				    <div class="row pt-lg-5 pt-4 mx-lg-5">
+				    	<div class="col-lg-4 col-12">
+				    		<div class="card mb-4">
+				    			<img src="images/card-1.jpg">
+				    			<div class="card-body">
+				    				<h5 class="card-title">Random Quote Generator</h5>
+				    				<p class="card-text fs18">
+				    				I created a Random Quote Generator using HTML, CSS, Bootstrap and JavaScript. This helps you to access lots of inspiring quotes.</p>
+				    				<a href="https://rohitkotian27.github.io/Random_Quote_Generator" target="_blank" alias="Random-Quote-Generator" class="btn btn-info">View Now</a>
+				    			</div>
+				    		</div>
+				    	</div>	
+				    	<div class="col-lg-4 col-12">
+				    		<div class="card mb-4">
+				    			<img src="images/card-2.jpg">
+				    			<div class="card-body">
+				    				<h5 class="card-title">To-Do List</h5>
+				    				<p class="card-text fs18">
+				    					I created a To-Do List using HTML and JavaScript. Using this To-Do List one can keep a track of tasks that needs to completed.
+				    				</p>
+				    				<a href="https://rohitkotian27.github.io/To-Do-List" target="_blank" alias="To-Do-List" class="btn btn-info">View Now</a>
+				    			</div>
+				    		</div>
+				    	</div>	
+				    	<div class="col-lg-4 col-12">
+				    		<div class="card mb-4">
+				    			<img src="images/card-3.jpg">
+				    			<div class="card-body">
+				    				<h5 class="card-title">Website Template</h5>
+				    				<p class="card-text fs18">
+				    				I learnt the usage of pre-defined classes in Bootstrap and created a Base Template using HTML, CSS, Javascript & Bootstrap 4.</p>
+				    				<a href="https://rohitkotian27.github.io/MyTemplate" target="_blank" alias="MyTemplate" class="btn btn-info">View Now</a>
+				    			</div>
+				    		</div>
+				    	</div>
+				    	<div class="col-lg-4 col-12">
+				    		<div class="card mb-4">
+				    			<img src="images/card-4.jpg">
+				    			<div class="card-body">
+				    				<h5 class="card-title">Color Guessing Game</h5>
+				    				<p class="card-text fs18">
+				    					I created a Color Guessing Game using HTML, CSS & Javascript. Here the user has to guess which color may appear on the Screen.
+				    				</p>
+				    				<a href="https://rohitkotian27.github.io/Color_Guessing_Game" target="_blank" alias="Color-Guessing-Game/" class="btn btn-info">View Now</a>
+				    			</div>
+				    		</div>
+				    	</div>	
+				    	<div class="col-lg-4 col-12">
+				    		<div class="card mb-4">
+				    			<img src="images/card-5.jpg">
+				    			<div class="card-body">
+				    				<h5 class="card-title">Alarm Clock</h5>
+				    				<p class="card-text fs18">
+				    					I created an Alarm Clock using JavaScript. Using this one can set the time and preselected sound will be played at the set time.
+				    				</p>
+				    				<a href="https://rohitkotian27.github.io/AlarmClockUsingJs" target="_blank" alias="AlarmClockUsingJs" class="btn btn-info">View Now</a>
+				    			</div>
+				    		</div>
+				    	</div>	
+				    	<div class="col-lg-4 col-12">
+				    		<div class="card mb-4">
+				    			<img src="images/card-6.jpg">
+				    			<div class="card-body">
+				    				<h5 class="card-title">Food You Love</h5>
+				    				<p class="card-text fs18">I created a Website for Food Lovers. Here you can find variety of food products and the information on the same.</p>
+				    				<a href="https://rohitkotian27.github.io/FoodYouLove" target="_blank" alias="FoodYouLove" class="btn btn-info">View Now</a>
+				    			</div>
+				    		</div>
+				    	</div>	
+				    </div>
+				</div>		
+			</div>
+		</div>
 	</section>
 </body>
 </html>
