--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -19,9 +19,9 @@
 		  <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
 		    <ul class="navbar-nav ml-auto">
 		      <li class="nav-item mx-lg-2">
-		        <a class="nav-link text-white" href="#">PORTFOLIO</a>
+		        <a class="nav-link text-white" href="#Portfolio">PORTFOLIO</a>
 		      <li class="nav-item mx-lg-2">
-		        <a class="nav-link text-white" href="#">ABOUT</a>
+		        <a class="nav-link text-white" href="#About">ABOUT</a>
 		      </li>
 		      <li class="nav-item mx-lg-2">
 		        <a class="nav-link text-white" href="#">CONTACT</a>
@@ -48,12 +48,12 @@
 			</div>	
 		</div>
 	</section>
-	<section id="secondSection">
+	<section id="Portfolio">
 		<div class="container-fluid">
-			<div class="row bg-Section2">
+			<div class="row bg-Section2 py-5">
 				<div class="col-12">
 					<div class="text-center header_Section">	
-						<h1 class="m-fs-35 pt-5 pb-lg-3 pb-1">PORTFOLIO</h1>
+						<h1 class="m-fs-35 pb-lg-3 pb-1">PORTFOLIO</h1>
 				    	<img class="img-fluid" src="images/divider.png">
 				    </div>	
 				    <div class="row pt-lg-5 pt-4 mx-lg-5">
@@ -62,7 +62,7 @@
 				    			<img src="images/card-1.jpg">
 				    			<div class="card-body">
 				    				<h5 class="card-title">Random Quote Generator</h5>
-				    				<p class="card-text fs18">
+				    				<p class="card-text fs16">
 				    				I created a Random Quote Generator using HTML, CSS, Bootstrap and JavaScript. This helps you to access lots of inspiring quotes.</p>
 				    				<a href="https://rohitkotian27.github.io/Random_Quote_Generator" target="_blank" alias="Random-Quote-Generator" class="btn btn-info">View Now</a>
 				    			</div>
@@ -73,7 +73,7 @@
 				    			<img src="images/card-2.jpg">
 				    			<div class="card-body">
 				    				<h5 class="card-title">To-Do List</h5>
-				    				<p class="card-text fs18">
+				    				<p class="card-text fs16">
 				    					I created a To-Do List using HTML and JavaScript. Using this To-Do List one can keep a track of tasks that needs to completed.
 				    				</p>
 				    				<a href="https://rohitkotian27.github.io/To-Do-List" target="_blank" alias="To-Do-List" class="btn btn-info">View Now</a>
@@ -85,7 +85,7 @@
 				    			<img src="images/card-3.jpg">
 				    			<div class="card-body">
 				    				<h5 class="card-title">Website Template</h5>
-				    				<p class="card-text fs18">
+				    				<p class="card-text fs16">
 				    				I learnt the usage of pre-defined classes in Bootstrap and created a Base Template using HTML, CSS, Javascript & Bootstrap 4.</p>
 				    				<a href="https://rohitkotian27.github.io/MyTemplate" target="_blank" alias="MyTemplate" class="btn btn-info">View Now</a>
 				    			</div>
@@ -96,7 +96,7 @@
 				    			<img src="images/card-4.jpg">
 				    			<div class="card-body">
 				    				<h5 class="card-title">Color Guessing Game</h5>
-				    				<p class="card-text fs18">
+				    				<p class="card-text fs16">
 				    					I created a Color Guessing Game using HTML, CSS & Javascript. Here the user has to guess which color may appear on the Screen.
 				    				</p>
 				    				<a href="https://rohitkotian27.github.io/Color_Guessing_Game" target="_blank" alias="Color-Guessing-Game/" class="btn btn-info">View Now</a>
@@ -108,7 +108,7 @@
 				    			<img src="images/card-5.jpg">
 				    			<div class="card-body">
 				    				<h5 class="card-title">Alarm Clock</h5>
-				    				<p class="card-text fs18">
+				    				<p class="card-text fs16">
 				    					I created an Alarm Clock using JavaScript. Using this one can set the time and preselected sound will be played at the set time.
 				    				</p>
 				    				<a href="https://rohitkotian27.github.io/AlarmClockUsingJs" target="_blank" alias="AlarmClockUsingJs" class="btn btn-info">View Now</a>
@@ -120,13 +120,39 @@
 				    			<img src="images/card-6.jpg">
 				    			<div class="card-body">
 				    				<h5 class="card-title">Food You Love</h5>
-				    				<p class="card-text fs18">I created a Website for Food Lovers. Here you can find variety of food products and the information on the same.</p>
+				    				<p class="card-text fs16">I created a Website for Food Lovers. Here you can find variety of food products and the information on the same.</p>
 				    				<a href="https://rohitkotian27.github.io/FoodYouLove" target="_blank" alias="FoodYouLove" class="btn btn-info">View Now</a>
 				    			</div>
 				    		</div>
 				    	</div>	
 				    </div>
 				</div>		
+			</div>
+		</div>
+	</section>
+	<section id="About">
+		<div class="container-fluid">
+			<div class="row bg-Section1 py-5">
+				<div class="col-12">
+				  <div class="text-center header_Section">	
+						<h1 class="m-fs-35 pb-lg-2 pb-1">ABOUT</h1>
+				    	<img class="img-fluid" src="images/divider.png">
+				  </div>
+				  <div class="row pt-lg-5 pt-4 mx-lg-5">
+				  	<div class="col-lg-5 offset-lg-1 col-12">
+				  		<img class="img-fluid mob_img mb-5 mb-lg-0" src="images/Rk_About.png">
+				  	</div>
+				  	<div class="col-lg-6 col-12">
+				  		<p class="m-fs-16">Computer Engineer by profession and always striving to enhance my career by "Learning Something New Every Single Day".</p>
+
+				  		<p class="m-fs-16">I am currently working at Accenture as a Web Developer. The reason behind choosing Web Development as a field of interest is because User Interface is something that makes everyone's life easy, so building one seems to be interesting and fun. I constantly try to keep myself updated regarding the knowledge I require to work in this field. The skills I have excelled are HTML, CSS, Javascript, Bootstrap, Sass, Python and Jquery. Looking forward to working on some new technologies.</p>
+
+				  		<p class="m-fs-16">Apart from that on weekends I spend my time working on furnishing my skills, participating in outdoor activities like Swimming, Cycling and also spending some time with my friends to know about their whereabouts.</p>
+
+				  		<p class="m-fs-16">I look forward to life by saying "Hope for the Best, Prepare for the worst."</p>
+				  	</div>
+				  </div>
+				</div>	
 			</div>
 		</div>
 	</section>
