--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -8,11 +8,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/myStyle.css">
 </head>
 <body class="body_font">
 	<nav class="navbar navbar-expand-lg navbar-dark navbar_font navbar_bg p-lg-3">
-		  <a class="navbar-brand ml-lg-5" href="#">ROHIT KOTIAN</a>
+		  <a class="navbar-brand ml-lg-5" href="#">Rohit Kotian</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -24,7 +26,7 @@
 		        <a class="nav-link text-white" href="#About">ABOUT</a>
 		      </li>
 		      <li class="nav-item mx-lg-2">
-		        <a class="nav-link text-white" href="#">CONTACT</a>
+		        <a class="nav-link text-white" href="#Contact">CONTACT</a>
 		      </li>
 		    </ul>
 		  </div>
@@ -40,7 +42,7 @@
 						<p class="pt-4 fs30 m-fs-20">
 							Web Developer | Designer | Innovator
 						</p>
-						<p class="lead mx-lg-5 pt-lg-3 fs20 m-fs-16">
+						<p class="lead mx-lg-5 pt-lg-3 fs20 m-fs-16 px-lg-5 px-0">
 							A self-motivated IT professional with high knowledge and proficiency in JavaScript, HTML , CSS and mobile responsive web development, as well as strong skills and ability in writing clean and efficient code.
 						</p>	
 					</div>
@@ -156,5 +158,60 @@
 			</div>
 		</div>
 	</section>
+	<section id="Contact">
+		<div class="container-fluid">
+			<div class="row bg-Section2 py-5">
+				<div class="col-12">
+					<div class="text-center header_Section">	
+						<h1 class="m-fs-35 pb-lg-2 pb-1">CONTACT ME</h1>
+				    	<img class="img-fluid" src="images/divider.png">
+				    </div>
+				    <div class="row mx-lg-5 pt-lg-5 pt-4 px-lg-5 px-0">
+				    	<div class="col-12">
+				    		<form class="form-inline">
+				    			<input class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customInput" maxlength="30" type="text" name="Name" placeholder="Name" required>
+				    			<input class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customInput" maxlength="40" type="email" name="email" placeholder="Email" required>
+				    			<input class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customInput" maxlength="10" type="text" name="number" placeholder="Phone Number" required>
+				    			<input class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customInput" size="50" type="text" name="text" placeholder="Message" required>
+				    			<button type="Submit" class="btn btn-primary btn-lg">SEND</button>
+				    		</form>
+				    	</div>	
+				    </div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container-fluid">
+			<div class="row bgLastSection py-5">
+				<div class="col-12">
+					<div class="row mx-lg-5 px-lg-5 px-0">
+						<div class="col-lg-4 text-white">
+							<p class="fs24 m-fs-20 text-center">LOCATION</p>
+							<p class="text-center m-fs-16">C-3 Narayan Smruti, Opposite Green Park, Gandhinagar, Dombivali, Mumbai.</p>
+						</div>
+						<div class="col-lg-4 text-white">
+							<p class="fs24 m-fs-20 text-center">CONNECT WITH ME</p>
+							<p class="text-center">
+								<a href="https://www.facebook.com/rohit.kotian.359" alias="facebook" target="_blank"><span class="fa fa-facebook-square fa-2x text-white">&nbsp;</span></a>
+								<a href="https://www.instagram.com/rohitkotian2703/" alias="instagram" target="_blank"><span class="fa fa-instagram fa-2x text-white">&nbsp;</span></a>
+								<a href="https://www.linkedin.com/in/rohit-kotian-1a1288167/" alias="linkedin" target="_blank"><span class="fa fa-linkedin-square fa-2x text-white">&nbsp;</span></a>
+								<a href="https://api.whatsapp.com/send?phone=+918451869020" alias="whatsapp" target="_blank"><span class="fa fa fa-whatsapp fa-2x text-white">&nbsp;</span></a>
+							</p>
+						</div>
+						<div class="col-lg-4 text-white">
+							<p class="fs24 m-fs-20 text-center">ANY IDEAS?</p>
+							<p class="text-center m-fs-16">Please feel free to contact me so that I can help you in implementing your ideas.</p>
+						</div>
+					</div>
+				</div>				
+			</div>
+		</div>
+	</section>
+	<footer class="w-100 footer_bg py-lg-3 py-2">
+		<p class="text-white my-0 fs16">Copyright &copy; 2020. All Rights Reserved.</p>
+	</footer>
 </body>
 </html>
+
+<!-- My Portfolio Rkrocks -->
