--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -172,8 +172,8 @@
 				    			<input class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customInput" maxlength="30" type="text" name="Name" placeholder="Name" required>
 				    			<input class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customInput" maxlength="40" type="email" name="email" placeholder="Email" required>
 				    			<input class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customInput" maxlength="10" type="text" name="number" placeholder="Phone Number" required>
-				    			<input class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customInput" size="50" type="text" name="text" placeholder="Message" required>
-				    			<button type="Submit" class="btn btn-primary btn-lg">SEND</button>
+				    			<textarea class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customText" size="50" maxlength="100" type="text" name="text" placeholder="Message" required></textarea>
+				    			<button type="Submit" class="btn btn-info btn-lg m-fs-16">SEND</button>
 				    		</form>
 				    	</div>	
 				    </div>
