--- a/To-Do-List/index.html
+++ b/To-Do-List/index.html
@@ -4,6 +4,7 @@
 	<title>To Do List</title>
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -17,13 +18,13 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-12">
-				<div class="jumbotron">
-					<h1 class="text-center">Welcome to the To Do List</h1>
-					<p class="lead text-center">A place where you can keep a track of all the activities you need to perform for the day.</p>
+				<div class="jumbotron mt-3">
+					<h1 class="text-center">Welcome to the <span class="noWrap">To Do List</span></h1>
+					<p class="text-center sub_content mt-3 mb-0">A place where you can keep a track of all the activities you need to perform for the day.</p>
 				</div>
 				<div class="myform text-center">
 					<input type="text" class="inp1" name="task" placeholder="Enter task to be performed" size="30" required>
-					<button class="btn ml-lg-1 mb-1 myBtn">Add!</button>
+					<button class="btn ml-lg-1 mb-lg-1 mt-3 mt-lg-0 myBtn">Add!</button>
 				</div>
 				<div class="myList mt-lg-2">&nbsp;</div>
 			</div>		
@@ -31,3 +32,4 @@
 	</div>
 </body>
 </html>
+<!-- This is code is written by RKrocks -->
