--- a/To-Do-List/index.html
+++ b/To-Do-List/index.html
@@ -23,7 +23,7 @@
 					<p class="text-center sub_content mt-3 mb-0">A place where you can keep a track of all the activities you need to perform for the day.</p>
 				</div>
 				<div class="myform text-center">
-					<input type="text" class="inp1" name="task" placeholder="Enter task to be performed" size="30" required>
+					<input type="text" class="inp1" name="task" placeholder="Enter task to be performed" size="30" maxlength="30" required>
 					<button class="btn ml-lg-1 mb-lg-1 mt-3 mt-lg-0 myBtn">Add!</button>
 				</div>
 				<div class="myList mt-lg-2">&nbsp;</div>
