--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script
@@ -18,8 +19,9 @@
     <script src="js/myScript.js"></script>
 </head>
 <body class="body_font">
-	<nav class="navbar navbar-expand-lg navbar-dark navbar_font navbar_bg p-lg-3">
-		  <a class="navbar-brand ml-lg-5" href="#">Rohit Kotian</a>
+	<div class="navbar_bg">
+	<nav class="navbar navbar-expand-lg navbar-dark navbar_font p-lg-3 mx-1600">
+		  <a class="navbar-brand ml-lg-5 heading" href="#">Rohit Kotian</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -36,20 +38,23 @@
 		    </ul>
 		  </div>
 	</nav>
+	</div>
 	<section id="firstSection">
 		<div class="container-fluid">
 			<div class="row bg-Section1">
-				<div class="col-12 fullscreen">
+				<div class="col-12 fullscreen mx-1600">
 					<div class="mt-5 pt-3 text-center">
 						<img class="rounded-circle" src="images/Rk_Profile.png">
-						<h1 class="display-4 pt-4 mob_heading">ROHIT KOTIAN</h1>
+						<h1 class="display-4 pt-4 mob_heading heading">Rohit Kotian</h1>
 						<img class="img-fluid" src="images/divider.png">
 						<p class="pt-4 fs30 m-fs-20">
 							Web Developer | Designer | Innovator
-						</p>
-						<p class="lead mx-lg-5 pt-lg-3 fs20 m-fs-16 px-lg-5 px-0">
-							A self-motivated IT professional with high knowledge and proficiency in JavaScript, HTML , CSS and mobile responsive web development, as well as strong skills and ability in writing clean and efficient code.
 						</p>	
+					</div>
+					<div class="col-lg-6 offset-lg-3 col-12">
+						<p class="lead mt-lg-4 mt-3 mb-5 fs20 m-fs-16 text-center">
+							A self-motivated IT professional with high knowledge and proficiency in JavaScript, HTML , CSS and mobile responsive web development, as well as strong skills and ability in writing clean and efficient code.
+						</p>
 					</div>
 				</div>		
 			</div>	
@@ -58,9 +63,9 @@
 	<section id="Portfolio">
 		<div class="container-fluid">
 			<div class="row bg-Section2 py-5">
-				<div class="col-12">
+				<div class="col-12 mx-1600">
 					<div class="text-center header_Section">	
-						<h1 class="m-fs-35 pb-lg-3 pb-1">PORTFOLIO</h1>
+						<h1 class="m-fs-35 pb-lg-3 pb-1 heading">PORTFOLIO</h1>
 				    	<img class="img-fluid" src="images/divider.png">
 				    </div>	
 				    <div class="row pt-lg-5 pt-4 mx-lg-5">
@@ -140,9 +145,9 @@
 	<section id="About">
 		<div class="container-fluid">
 			<div class="row bg-Section1 py-5">
-				<div class="col-12">
+				<div class="col-12 mx-1600">
 				  <div class="text-center header_Section">	
-						<h1 class="m-fs-35 pb-lg-2 pb-1">ABOUT</h1>
+						<h1 class="m-fs-35 pb-lg-2 pb-1 heading">ABOUT</h1>
 				    	<img class="img-fluid" src="images/divider.png">
 				  </div>
 				  <div class="row pt-lg-5 pt-4 mx-lg-5">
@@ -166,25 +171,33 @@
 	<section id="Contact">
 		<div class="container-fluid">
 			<div class="row bg-Section2 py-5">
-				<div class="col-12">
+				<div class="col-12 mx-1600">
 					<div class="text-center header_Section">	
-						<h1 class="m-fs-35 pb-lg-2 pb-1">CONTACT ME</h1>
+						<h1 class="m-fs-35 pb-lg-2 pb-1 heading">GET IN TOUCH</h1>
 				    	<img class="img-fluid" src="images/divider.png">
 				    </div>
 				    <div class="row mx-lg-5 pt-lg-5 pt-4 px-lg-5 px-0">
-				    	<div class="col-12">
+				    	<div class="col-lg-6 col-12 mb-3">
+				    		<h1>Contact Details</h1>
+				    		<p>Please feel free to contact me for queries related to any ideas that needs implementation.</p>
+				    		<p class="mb-2"><span class="fa fa-envelope fa_size">&nbsp;&nbsp;</span>Email : rohitkotian07@gmail.com</p>
+				    		<p class="mb-2"><span class="fa fa-phone fa_size">&nbsp;&nbsp;</span>Mobile no : 8451869020</p>
+				    		<p class="mb-2"><span class="fa fa-github fa_size">&nbsp;&nbsp;</span>Github : <a href="https://github.com/RohitKotian27" target="_blank">github.com/RohitKotian27</a></p>
+				    		<p></p>
+				    	</div>
+				    	<div class="col-lg-6 col-12">
 				    		<form class="form-inline">
-				    			<input class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customInput" maxlength="30" type="text" name="Name" placeholder="Your name" required>
-				    			<input class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customInput" maxlength="10" type="text" name="number" placeholder="Mobile number" required>
-				    			<input class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customInput" maxlength="40" type="email" name="email" placeholder="Email-id" required>
-				    			<div class="w-100 mb-lg-4 mb-3">
+				    			<input class="w-100 mb-3 p-2 customInput" maxlength="30" type="text" name="Name" placeholder="Your name" required>
+				    			<input class="w-100 mb-3 p-2 customInput" maxlength="10" type="text" name="number" placeholder="Mobile number" required>
+				    			<input class="w-100 mb-3 p-2 customInput" maxlength="40" type="email" name="email" placeholder="Email-id" required>
+				    			<textarea class="w-100 mb-3 p-2 customText" size="50" maxlength="100" type="text" name="text" placeholder="Your message" required></textarea>
+				    			<div class="w-100 mb-3">
 				    				<input type="checkbox" class="tick" name="checked" id="checked">
 				    				<label class="d-inline">Any message ?</label>
 				    			</div>
-				    			<textarea class="w-100 p-lg-3 mb-lg-4 mb-3 p-2 customText" size="50" maxlength="100" type="text" name="text" placeholder="Your message" required></textarea>
 				    			<button type="Submit" class="d-block btn btn-info btn-lg m-fs-16">SEND</button>
 				    		</form>
-				    	</div>	
+				    	</div>
 				    </div>
 				</div>
 			</div>
@@ -193,14 +206,14 @@
 	<section>
 		<div class="container-fluid">
 			<div class="row bgLastSection py-5">
-				<div class="col-12">
+				<div class="col-12 mx-1600">
 					<div class="row mx-lg-5 px-lg-5 px-0">
-						<div class="col-lg-4 text-white">
-							<p class="fs24 m-fs-20 text-center">LOCATION</p>
-							<p class="text-center m-fs-16">C-3 Narayan Smruti, Opposite Green Park, Gandhinagar, Dombivali, Mumbai.</p>
+						<div class="col-lg-4 col-12 text-white mb-3 mb-lg-0">
+							<p class="fs24 m-fs-20 text-center mb-lg-3 mb-2"><span class="fa fa-home">&nbsp;&nbsp;</span>LOCATION</p>
+							<p class="text-center m-fs-16 px-5 px-lg-0">C-3 Narayan Smruti, Opposite Green Park, Gandhinagar, Dombivali, Mumbai.</p>
 						</div>
-						<div class="col-lg-4 text-white">
-							<p class="fs24 m-fs-20 text-center">CONNECT WITH ME</p>
+						<div class="col-lg-4 col-12 text-white mb-3 mb-lg-0">
+							<p class="fs24 m-fs-20 text-center mb-lg-3 mb-2">CONNECT WITH ME</p>
 							<p class="text-center">
 								<a href="https://www.facebook.com/rohit.kotian.359" alias="facebook" target="_blank"><span class="fa fa-facebook-square fa-2x text-white">&nbsp;</span></a>
 								<a href="https://www.instagram.com/rohitkotian2703/" alias="instagram" target="_blank"><span class="fa fa-instagram fa-2x text-white">&nbsp;</span></a>
@@ -208,9 +221,9 @@
 								<a href="https://api.whatsapp.com/send?phone=+918451869020" alias="whatsapp" target="_blank"><span class="fa fa fa-whatsapp fa-2x text-white">&nbsp;</span></a>
 							</p>
 						</div>
-						<div class="col-lg-4 text-white">
-							<p class="fs24 m-fs-20 text-center">ANY IDEAS?</p>
-							<p class="text-center m-fs-16">Please feel free to contact me so that I can help you in implementing your ideas.</p>
+						<div class="col-lg-4 col-12 text-white">
+							<p class="fs24 m-fs-20 text-center mb-lg-3 mb-2">ANY IDEAS?</p>
+							<p class="text-center m-fs-16 px-5 px-lg-0">Please feel free to contact me so that I can help you in implementing your ideas.</p>
 						</div>
 					</div>
 				</div>				
