--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -178,22 +178,22 @@
 				    </div>
 				    <div class="row mx-lg-5 pt-lg-5 pt-4 px-lg-5 px-0">
 				    	<div class="col-lg-6 col-12 mb-3">
-				    		<h1>Contact Details</h1>
-				    		<p>Please feel free to contact me for queries related to any ideas that needs implementation.</p>
-				    		<p class="mb-2"><span class="fa fa-envelope fa_size">&nbsp;&nbsp;</span>Email : rohitkotian07@gmail.com</p>
-				    		<p class="mb-2"><span class="fa fa-phone fa_size">&nbsp;&nbsp;</span>Mobile no : 8451869020</p>
-				    		<p class="mb-2"><span class="fa fa-github fa_size">&nbsp;&nbsp;</span>Github : <a href="https://github.com/RohitKotian27" target="_blank">github.com/RohitKotian27</a></p>
+				    		<h3>Contact Details</h3>
+				    		<p class="m-fs-16">Please feel free to contact me for queries related to any ideas that needs implementation.</p>
+				    		<p class="mb-2 m-fs-16"><span class="fa fa-envelope fa_size">&nbsp;&nbsp;</span>Email : rohitkotian07@gmail.com</p>
+				    		<p class="mb-2 m-fs-16"><span class="fa fa-phone fa_size">&nbsp;&nbsp;</span>Mobile no : 8451869020</p>
+				    		<p class="mb-2 m-fs-16"><span class="fa fa-github fa_size">&nbsp;&nbsp;</span>Github : <a href="https://github.com/RohitKotian27" target="_blank">github.com/RohitKotian27</a></p>
 				    		<p></p>
 				    	</div>
 				    	<div class="col-lg-6 col-12">
 				    		<form class="form-inline">
-				    			<input class="w-100 mb-3 p-2 customInput" maxlength="30" type="text" name="Name" placeholder="Your name" required>
-				    			<input class="w-100 mb-3 p-2 customInput" maxlength="10" type="text" name="number" placeholder="Mobile number" required>
-				    			<input class="w-100 mb-3 p-2 customInput" maxlength="40" type="email" name="email" placeholder="Email-id" required>
-				    			<textarea class="w-100 mb-3 p-2 customText" size="50" maxlength="100" type="text" name="text" placeholder="Your message" required></textarea>
+				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="30" type="text" name="Name" placeholder="Your name" required>
+				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="10" type="text" name="number" placeholder="Mobile number" required>
+				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="40" type="email" name="email" placeholder="Email-id" required>
+				    			<textarea class="w-100 mb-3 p-2 customText m-fs-16" size="50" maxlength="100" type="text" name="text" placeholder="Your message" required></textarea>
 				    			<div class="w-100 mb-3">
 				    				<input type="checkbox" class="tick" name="checked" id="checked">
-				    				<label class="d-inline">Any message ?</label>
+				    				<label class="d-inline m-fs-16">Any message ?</label>
 				    			</div>
 				    			<button type="Submit" class="d-block btn btn-info btn-lg m-fs-16">SEND</button>
 				    		</form>
